--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -819,11 +819,11 @@
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group E4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group B2<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Caroline Wozniacki<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group F3<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group B1<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Victoria Gorlova<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group F4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
@@ -836,11 +836,11 @@
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group F2<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group B3<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Alize Lim<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group F1<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group B4<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Rossella Fiamingo<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Evgenia Medvedeva<span class="score">&nbsp;</span></a></li>
@@ -934,7 +934,7 @@
             <!-- END ROUND THREE -->
             <div class="round round-two current">
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group C1<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Alison Stokke<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group G4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
@@ -946,12 +946,12 @@
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group H4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group C3<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Anna Kournikova<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group G2<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group G1<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group C4<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Maria Kirilenko<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group D3<span class="score">&nbsp;</span></a></li>
@@ -962,7 +962,7 @@
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group D4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group C2<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Eleonora Goldoni<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group G3<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
