--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -377,75 +377,75 @@
                 <tbody>
                   <tr class="table-active">
                     <td>Jutta Leerdam</td>
-                    <td>3 - 0 - 0</td>
-                    <td>9</td>
-                    <td>6</td>
-                  </tr>
-                  <tr class="table-active">
-                    <td>Fanny Stollar</td>
-                    <td>2 - 0 - 1</td>
-                    <td>6.5</td>
-                    <td>3</td>
+                    <td>4 - 0 - 0</td>
+                    <td>12</td>
+                    <td>12.5</td>
                   </tr>
                   <tr class="table-active">
                     <td>Alex Morgan</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>3.5</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>9.5</td>
                   </tr>
                   <tr class="table-active">
-                    <td>Julie Ertz</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>3</td>
-                  </tr>
-                  <tr>
                     <td>Skylar Diggins</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>3</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>9</td>
                   </tr>
-                  <tr>
-                    <td>Ruth Spelmeyer</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>0</td>
+                  <tr class="table-active">
+                    <td>Fanny Stollar</td>
+                    <td>2 - 1 - 1</td>
+                    <td>6.5</td>
+                    <td>15.5</td>
                   </tr>
                   <tr>
                     <td>Mandy Minella</td>
-                    <td>1 - 1 - 1</td>
-                    <td>3.5</td>
-                    <td>6</td>
+                    <td>2 - 1 - 1</td>
+                    <td>6.5</td>
+                    <td>9</td>
                   </tr>
                   <tr>
-                    <td>Gina Luckenkemper</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
+                    <td>Julie Ertz</td>
+                    <td>2 - 2 - 0</td>
                     <td>6</td>
+                    <td>12</td>
+                  </tr>
+                  <tr>
+                    <td>Ruth Spelmeyer</td>
+                    <td>2 - 2 - 0</td>
+                    <td>6</td>
+                    <td>9</td>
                   </tr>
                   <tr>
                     <td>Mikaela Shiffrin</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
+                    <td>2 - 2 - 0</td>
                     <td>6</td>
+                    <td>9</td>
+                  </tr>
+                  <tr>
+                    <td>Gina Luckenkemper</td>
+                    <td>1 - 3 - 0</td>
+                    <td>3</td>
+                    <td>12.5</td>
                   </tr>
                   <tr>
                     <td>Marta Menegatti</td>
-                    <td>1 - 2 - 0</td>
+                    <td>1 - 3 - 0</td>
+                    <td>3</td>
+                    <td>12</td>
+                  </tr>
+                  <tr>
+                    <td>Victoria Azarenka</td>
+                    <td>1 - 3 - 0</td>
                     <td>3</td>
                     <td>6</td>
                   </tr>
                   <tr>
                     <td>Jessica Werndl</td>
-                    <td>0 - 3 - 0</td>
+                    <td>0 - 4 - 0</td>
                     <td>0</td>
-                    <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>Victoria Azarenka</td>
-                    <td>0 - 3 - 0</td>
-                    <td>0</td>
-                    <td>6</td>
+                    <td>9</td>
                   </tr>
                 </tbody>
               </table>
@@ -938,11 +938,11 @@
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group G4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group D2<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Alex Morgan<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group H3<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group D1<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Jutta Leerdam<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group H4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
@@ -954,12 +954,12 @@
                 <li class="team team-top name-details"><a href="javascript:void(0);">Maria Kirilenko<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group D3<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Skylar Diggins<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group H2<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group H1<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group D4<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Fanny Stollar<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Eleonora Goldoni<span class="score">&nbsp;</span></a></li>
