--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -507,7 +507,7 @@
                     <td>0</td>
                   </tr>
                   <tr>
-                    <td>Miriam Neureuther</td>
+                    <td>Alysha Newman</td>
                     <td>0 - 0 - 0</td>
                     <td>0</td>
                     <td>0</td>
