--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -465,76 +465,76 @@
                 </thead>
                 <tbody>
                   <tr class="table-active">
-                    <td>Lucy Robson</td>
-                    <td>3 - 0 - 0</td>
-                    <td>9</td>
-                    <td>3</td>
-                  </tr>
-                  <tr class="table-active">
                     <td>Elina Svitolina</td>
-                    <td>3 - 0 - 0</td>
-                    <td>9</td>
-                    <td>3</td>
+                    <td>4 - 0 - 0</td>
+                    <td>12</td>
+                    <td>6.5</td>
                   </tr>
                   <tr class="table-active">
                     <td>Lieke Klaver</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>6</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>15</td>
+                  </tr>
+                  <tr class="table-active">
+                    <td>Lucy Robson</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>15</td>
                   </tr>
                   <tr class="table-active">
                     <td>Alysha Newman</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>6</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>12</td>
                   </tr>
                   <tr>
                     <td>Mallory Pugh</td>
-                    <td>2 - 1 - 0</td>
+                    <td>2 - 2 - 0</td>
                     <td>6</td>
-                    <td>3</td>
-                  </tr>
-                  <tr>
-                    <td>Naomi Osaka</td>
-                    <td>1 - 1 - 1</td>
-                    <td>3.5</td>
-                    <td>3</td>
+                    <td>15</td>
                   </tr>
                   <tr>
                     <td>Luna Thiel</td>
-                    <td>1 - 2 - 0</td>
+                    <td>2 - 2 - 0</td>
                     <td>3</td>
-                    <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>Pauline Schäfer</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>Jonelle Filigno</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>3.5</td>
+                    <td>12</td>
                   </tr>
                   <tr>
                     <td>Lena Oberdorf</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>3</td>
+                    <td>2 - 2 - 0</td>
+                    <td>6</td>
+                    <td>9</td>
                   </tr>
                   <tr>
-                    <td>Laura Ludwig</td>
-                    <td>0 - 2 - 1</td>
-                    <td>0.5</td>
+                    <td>Naomi Osaka</td>
+                    <td>1 - 2 - 1</td>
                     <td>3.5</td>
+                    <td>12</td>
+                  </tr>
+                  <tr>
+                    <td>Pauline Schäfer</td>
+                    <td>1 - 3 - 0</td>
+                    <td>3</td>
+                    <td>12</td>
+                  </tr>
+                  <tr>
+                    <td>Jonelle Filigno</td>
+                    <td>1 - 3 - 0</td>
+                    <td>3</td>
+                    <td>9.5</td>
                   </tr>
                   <tr>
                     <td>Sophia Floersch</td>
-                    <td>0 - 3 - 0</td>
-                    <td>0</td>
+                    <td>1 - 3 - 0</td>
                     <td>3</td>
+                    <td>9</td>
+                  </tr>
+                  <tr>
+                    <td>Laura Ludwig</td>
+                    <td>0 - 3 - 1</td>
+                    <td>0.5</td>
+                    <td>6.5</td>
                   </tr>
                 </tbody>
               </table>
@@ -816,7 +816,7 @@
             <div class="round round-two current">
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group E4<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Alysha Newman<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Caroline Wozniacki<span class="score">&nbsp;</span></a></li>
@@ -827,11 +827,11 @@
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group F4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group E2<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Lieke Klaver<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Chloe Kim<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group E1<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Elina Svitolina<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Silje Norendal<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
@@ -844,7 +844,7 @@
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Evgenia Medvedeva<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group E3<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Lucy Robson<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
             <!-- END ROUND TWO -->
