--- a/compare.html
+++ b/compare.html
@@ -12,6 +12,9 @@
         gtag('config', 'UA-168647005-1');
     </script>
 
+    <!-- Load plotly.js into the DOM -->
+    <script src='https://cdn.plot.ly/plotly-2.18.2.min.js'></script>
+
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title id="title-h2h">CelebBattles</title>
@@ -137,6 +140,14 @@
                             </tr>
                         </table>
                     </div>
+
+                    <br>
+                    <hr>
+                    <div class="row">
+                        <h4>Ranking change over time</h4>
+                        <div id='comparePlotlyDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
+                    </div>
+
                     <br>
                     <hr>
                     <div class="row">
