--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -482,13 +482,13 @@
                     <td>9</td>
                     <td>15</td>
                   </tr>
-                  <tr class="table-active">
-                    <td>Alysha Newman</td>
+                  <tr>
+                    <td>Alysha Newman (DQ)</td>
                     <td>3 - 1 - 0</td>
                     <td>9</td>
                     <td>12</td>
                   </tr>
-                  <tr>
+                  <tr class="table-active">
                     <td>Mallory Pugh</td>
                     <td>2 - 2 - 0</td>
                     <td>6</td>
@@ -816,7 +816,7 @@
             <div class="round round-two current">
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Alysha Newman<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Mallory Pugh<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Caroline Wozniacki<span class="score">&nbsp;</span></a></li>
