--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -552,76 +552,76 @@
                 </thead>
                 <tbody>
                   <tr class="table-active">
-                    <td>Livvy Dunn</td>
-                    <td>3 - 0 - 0</td>
+                    <td>Olivia Dunn</td>
+                    <td>4 - 0 - 0</td>
+                    <td>12</td>
+                    <td>18</td>
+                  </tr>
+                  <tr class="table-active">
+                    <td>Emma Raducanu</td>
+                    <td>3 - 1 - 0</td>
                     <td>9</td>
-                    <td>6</td>
+                    <td>12</td>
                   </tr>
                   <tr class="table-active">
                     <td>Lily Muni He</td>
-                    <td>3 - 0 - 0</td>
+                    <td>3 - 1 - 0</td>
                     <td>9</td>
-                    <td>3</td>
+                    <td>9</td>
                   </tr>
                   <tr class="table-active">
-                    <td>Francesca Piccinini</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>6</td>
-                  </tr>
-                  <tr class="table-active">
-                    <td>Hilary Knight</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>3</td>
-                  </tr>
-                  <tr>
-                    <td>Emma Raducanu</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>3</td>
-                  </tr>
-                  <tr>
                     <td>Gracie Gold</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>3</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>9</td>
                   </tr>
                   <tr>
                     <td>Lindsey Vonn</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
+                    <td>2 - 2 - 0</td>
                     <td>6</td>
+                    <td>15</td>
                   </tr>
                   <tr>
-                    <td>Melanie Leupolz</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
+                    <td>Francesca Piccinini</td>
+                    <td>2 -2 - 0</td>
                     <td>6</td>
+                    <td>15</td>
                   </tr>
                   <tr>
-                    <td>Marlene Meier</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
+                    <td>Hilary Knight</td>
+                    <td>2 - 2 - 0</td>
                     <td>6</td>
+                    <td>12</td>
                   </tr>
                   <tr>
                     <td>Hope Solo</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>3</td>
+                    <td>2 - 2 - 0</td>
+                    <td>6</td>
+                    <td>9</td>
                   </tr>
                   <tr>
                     <td>Nina Betschart</td>
-                    <td>0 - 3 - 0</td>
-                    <td>0</td>
-                    <td>6</td>
+                    <td>1 - 3 - 0</td>
+                    <td>3</td>
+                    <td>15</td>
+                  </tr>
+                  <tr>
+                    <td>Marlene Meier</td>
+                    <td>1 - 3 - 0</td>
+                    <td>3</td>
+                    <td>15</td>
+                  </tr>
+                  <tr>
+                    <td>Melanie Leupolz</td>
+                    <td>1 - 3 - 0</td>
+                    <td>3</td>
+                    <td>12</td>
                   </tr>
                   <tr>
                     <td>Susie Wolff</td>
-                    <td>0 - 3 - 0</td>
+                    <td>0 - 4 - 0</td>
                     <td>0</td>
-                    <td>3</td>
+                    <td>6</td>
                   </tr>
                 </tbody>
               </table>
@@ -820,11 +820,11 @@
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Caroline Wozniacki<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group F3<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Lily Muni He<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Victoria Gorlova<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group F4<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Gracie Gold<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Lieke Klaver<span class="score">&nbsp;</span></a></li>
@@ -835,11 +835,11 @@
                 <li class="team team-top name-details"><a href="javascript:void(0);">Silje Norendal<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group F2<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Emma Raducanu<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Alize Lim<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group F1<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Dunn<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Rossella Fiamingo<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
