--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -640,75 +640,75 @@
                 <tbody>
                   <tr class="table-active">
                     <td>McKayla Maroney</td>
-                    <td>3 - 0 - 0</td>
-                    <td>9</td>
-                    <td>6</td>
-                  </tr>
-                  <tr class="table-active">
-                    <td>Camila Giorgi</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>6</td>
-                  </tr>
-                  <tr class="table-active">
-                    <td>Maria Sharapova</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>6</td>
+                    <td>4 - 0 - 0</td>
+                    <td>12</td>
+                    <td>12</td>
                   </tr>
                   <tr class="table-active">
                     <td>Michelle Jenneke</td>
-                    <td>2 - 1 - 0</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>12</td>
+                  </tr>
+                  <tr class="table-active">
+                    <td>Maria Sharapova</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>12</td>
+                  </tr>
+                  <tr class="table-active">
+                    <td>Camila Giorgi</td>
+                    <td>2 - 2 - 0</td>
                     <td>6</td>
-                    <td>3</td>
+                    <td>18</td>
                   </tr>
                   <tr>
                     <td>Eileen Gu</td>
-                    <td>2 - 1 - 0</td>
+                    <td>2 - 2 - 0</td>
                     <td>6</td>
-                    <td>3</td>
-                  </tr>
-                  <tr>
-                    <td>Anastasia Ashley</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>3</td>
+                    <td>15</td>
                   </tr>
                   <tr>
                     <td>Giulia Gwinn</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
+                    <td>2 - 2 - 0</td>
                     <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>Emma McKeon</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>Gabriela Soukalova</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>6</td>
+                    <td>15</td>
                   </tr>
                   <tr>
                     <td>Ronda Rousey</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>3</td>
+                    <td>2 - 2 - 0</td>
+                    <td>6</td>
+                    <td>12</td>
+                  </tr>
+                  <tr>
+                    <td>Anastasia Ashley</td>
+                    <td>2 - 2 - 0</td>
+                    <td>6</td>
+                    <td>12</td>
                   </tr>
                   <tr>
                     <td>Simona Halep</td>
-                    <td>1 - 2 - 0</td>
+                    <td>2 - 2 - 0</td>
+                    <td>6</td>
+                    <td>9</td>
+                  </tr>
+                  <tr>
+                    <td>Emma McKeon</td>
+                    <td>1 - 3 - 0</td>
                     <td>3</td>
+                    <td>15</td>
+                  </tr>
+                  <tr>
+                    <td>Gabriela Soukalova</td>
+                    <td>1 - 3 - 0</td>
                     <td>3</td>
+                    <td>12</td>
                   </tr>
                   <tr>
                     <td>Simona Quadarella</td>
-                    <td>0 - 3 - 0</td>
+                    <td>0 - 4 - 0</td>
                     <td>0</td>
-                    <td>3</td>
+                    <td>9</td>
                   </tr>
                 </tbody>
               </table>
@@ -935,7 +935,7 @@
             <div class="round round-two current">
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Alison Stokke<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group G4<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Camila Giorgi<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Alex Morgan<span class="score">&nbsp;</span></a></li>
@@ -947,10 +947,10 @@
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Anna Kournikova<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group G2<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Michelle Jenneke<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group G1<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">McKayla Maroney<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Maria Kirilenko<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
@@ -963,7 +963,7 @@
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Eleonora Goldoni<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group G3<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Maria Sharapova<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
           </div>
