--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -727,75 +727,75 @@
                 <tbody>
                   <tr class="table-active">
                     <td>Puck Moonen</td>
-                    <td>3 - 0 - 0</td>
-                    <td>9</td>
-                    <td>6</td>
+                    <td>4 - 0 - 0</td>
+                    <td>12</td>
+                    <td>15</td>
                   </tr>
                   <tr class="table-active">
                     <td>Eugenie Bouchard</td>
-                    <td>3 - 0 - 0</td>
+                    <td>3 - 1 - 0</td>
                     <td>9</td>
-                    <td>3</td>
+                    <td>12</td>
                   </tr>
                   <tr class="table-active">
-                    <td>Nerea Marti</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>3</td>
+                    <td>Valentina Vignali</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>12</td>
                   </tr>
                   <tr class="table-active">
                     <td>Colleen Quigley</td>
-                    <td>2 - 1 - 0</td>
-                    <td>6</td>
-                    <td>3</td>
+                    <td>3 - 1 - 0</td>
+                    <td>9</td>
+                    <td>9</td>
                   </tr>
                   <tr>
-                    <td>Valentina Vignali</td>
-                    <td>2 - 0 - 0</td>
+                    <td>Nerea Marti</td>
+                    <td>2 - 2 - 0</td>
                     <td>6</td>
-                    <td>3</td>
-                  </tr>
-                  <tr>
-                    <td>Lena Goessling</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>6</td>
-                  </tr>
-                  <tr>
-                    <td>Marion Rousse</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>6</td>
+                    <td>15</td>
                   </tr>
                   <tr>
                     <td>Brooke Henderson</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>3</td>
-                  </tr>
-                  <tr>
-                    <td>Suzanne Schulting</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>3</td>
-                  </tr>
-                  <tr>
-                    <td>Ellyse Perry</td>
-                    <td>1 - 2 - 0</td>
-                    <td>3</td>
-                    <td>3</td>
+                    <td>2 - 2 - 0</td>
+                    <td>6</td>
+                    <td>9</td>
                   </tr>
                   <tr>
                     <td>Julia Goerges</td>
-                    <td>1 - 2 - 0</td>
+                    <td>2 - 2 - 0</td>
+                    <td>6</td>
+                    <td>9</td>
+                  </tr>
+                  <tr>
+                    <td>Suzanne Schulting</td>
+                    <td>2 - 2 - 0</td>
+                    <td>6</td>
+                    <td>6</td>
+                  </tr>
+                  <tr>
+                    <td>Lena Goessling</td>
+                    <td>1 - 3 - 0</td>
                     <td>3</td>
-                    <td>0</td>
+                    <td>15</td>
+                  </tr>
+                  <tr>
+                    <td>Marion Rousse</td>
+                    <td>1 - 3 - 0</td>
+                    <td>3</td>
+                    <td>15</td>
+                  </tr>
+                  <tr>
+                    <td>Ellyse Perry</td>
+                    <td>1 - 3 - 0</td>
+                    <td>3</td>
+                    <td>12</td>
                   </tr>
                   <tr>
                     <td>Sania Mirza</td>
-                    <td>0 - 3 - 0</td>
-                    <td>3</td>
+                    <td>0 - 4 - 0</td>
                     <td>0</td>
+                    <td>12</td>
                   </tr>
                 </tbody>
               </table>
@@ -939,11 +939,11 @@
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Alex Morgan<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group H3<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Valentina Vignali<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Jutta Leerdam<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group H4<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Colleen Quigley<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Anna Kournikova<span class="score">&nbsp;</span></a></li>
@@ -955,10 +955,10 @@
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Skylar Diggins<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group H2<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Eugenie Bouchard<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group H1<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Puck Moonen<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Fanny Stollar<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
